# ode

./: .gitignore  ASTTree  CMakeLists.txt  README.md  TODO.md  example1  gramma.md  gramma.txt
examples/: example1.ode  example1.rinha  example2.ode  example3.ode  example4.ode  example5.ode  example6.ode  example7.ode  sla.ode  unary.ode
include/: ASTNode.hpp  Analyzer.hpp  Compiler.hpp  Helper.hpp  IRBuilder.hpp  IRGenerator.hpp  Lexer.hpp  Linker.hpp  Parser.hpp  Reader.hpp  SemanticAnalyzer.hpp  Token.hpp
include/Lexer/: Lexer.hpp  Token.hpp
include/Parser/: AST.hpp  ASTPrinter.hpp  Parser.hpp
src/: ASTNode.cpp  Analyzer.cpp  Compiler.cpp  Lexer.cpp  Linker.cpp  Parser.cpp  Reader.cpp  Token.cpp  main.cpp
src/front/: ASTNode.cpp  Analyzer.cpp  Lexer.cpp  Parser.cpp  Reader.cpp  Token.cpp
src/front/IRGenerator/: Expression.cpp  Function.cpp  Helper.cpp  IRGenerator.cpp  Output.cpp  Statement.cpp
src/front/Lexer/: Lexer.cpp
src/front/Lexer/Token/: Builder.cpp  Classifier.cpp  Scanner.cpp  Stream.cpp
src/front/Parser/: AST.cpp  ASTPrinter.cpp  Expression.cpp  Function.cpp  Parser.cpp  Program.cpp  Statement.cpp  Type.cpp
src/front/SemanticAnalyzer/: Expression.cpp  SemanticAnalyzer.cpp  SymbolTable.cpp
src/include/: ASTNode.h  ASTNode.hpp  Analyzer.hpp  Helper.h  Lexer.h  Lexer.hpp  Parser.h  Parser.hpp  Reader.h  Token.h
